--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## v0.1.3
+
+- Add Libuuid_jll as dependency to not require uuid to be installed on host system
+
 ## v0.1.2
 
 - Add ! to the names of generated functions of prepare_bitstream
