--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 ## Unreleased
 
+- Fix order of BO arguments in BOArray constructor which lead to allocation errors
 - Convert prepare_bitstream function to macro and fix signature generation
 - Minor changes in method names (adding ! to some methods because they change their input parameters)
 - Move wrapped API to XRTWrap submodule to support easier extension of core functionality
